--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>org.ops4j.pax.web.samples</groupId>
+		<artifactId>war</artifactId>
+		<version>7.2.18</version>
+		<type>war</type>
+	</dependency>
   </dependencies>
 
   <build>
@@ -49,9 +55,9 @@
           <version>2.22.1</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.0.2</version>
-        </plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+		</plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
